hw5_lab8/tests/errors/sem_redeclare_var.kt
// EXPECT: semantic error — redeclaring same name in same scope
fun main() {
    var x: Int = 1
    var x: Int = 2
}
